src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_40_4.deca
// Description:
//    regle 3.40, la classe de instanceof doit etre une classe
//
// Resultats:
//    Ligne 14: InstanceOf can only be used on class types.


class C{

}

{
    C c;
    if( c instanceof int){
        print("");
    }
}